[project]
authors = [{name = "Pertti Palo", email = "giuthas@gmail.com"}]
dependencies = []
description = "Add a short description here"
name = "generate_aaa_stimulus_list"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
generate_aaa_stimulus_list = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
numpy = ">=2.1.3,<3"
scipy = ">=1.14.1,<2"
