[project]
name = "Generate Stimulus List"
description = "Generate Stimulus Lists for AAA, RASL and possibly others."
authors = [
    {name = "Pertti Palo", email = "giuthas@gmail.com"}
]
version = "0.1.0"
license = "GPL-3.0"
readme = "README.md"
dependencies = []
requires-python = ">= 3.11"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.sdist]
include = [
    "/source",
]

[tool.hatch.build.targets.wheel]
include = ["source/"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.pypi-dependencies]
generate_stimulus_list = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
numpy = ">=2.1.3,<3"
scipy = ">=1.14.1,<2"
